--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#experience">Experience</a>
+        <a href='./resources/resume/resume.pdf' target="_blank">Resume</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </div>
@@ -26,6 +27,7 @@
       <a class="home" href="#home">&lt; Vince Dinh /&gt;</a>
       <a href="#about">About</a>
       <a href="#experience">Experience</a>
+      <a href='./resources/resume/resume.pdf' target="_blank">Resume</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
       <a href="javascript:void(0);" id="openNav" class="openNav">&#9776;</a>
