Link to Vinhy Designs now opens in new tab

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="centerContent">
         <section id="about" class="aboutSection">
           <h1>About</h1>
-          <h3>My introduction with web development started back in high school, when I set up a <a href="https://www.shopify.com/" target="_blank" class="highlightText">Shopify</a> site for a short-term  <a href="https://instagram.com/vinhydesigns/" class="highlightText">t-shirt business</a> that I ran by word of mouth around campus and had online for a bit over the height of COVID.</h3>
+          <h3>My introduction with web development started back in high school, when I set up a <a href="https://www.shopify.com/" target="_blank" class="highlightText">Shopify</a> site for a short-term  <a href="https://instagram.com/vinhydesigns/" target="_blank" class="highlightText">t-shirt business</a> that I ran by word of mouth around campus and had online for a bit over the height of COVID.</h3>
           <h3>Going into college, I chose to pursue Computer Science because I always found coding interesting, and later tacked on the Business Management Economics major because I was interested in learning more about e-commerce and marketing.</h3>
           <h3>I also had the pleasure of joining Spirent Communications as a Software Engineer Intern during my Junior year, working with its Landslide team to address bugs and tickets, and develop a Java based framework to help business users troubleshoot issues with the software.</h3>
           <h3>By my senior year, I had the opportunity to take a Full Stack Web Development series offered for the first time ever, taught by one of my favorite professors. Since then, I've been eager to learn as much as possible about developing eye-catching and functional responsive web apps!</h3>
