Updated title text

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="homeIntro">
           <h1>Hi, my name's Vince.</h1>
           <h2>I'm a '23 graduate of UCSC with a Computer Science B.S. and Business Management Economics B.A. 🍌🐌</h2>
-          <h3>I like designing and building responsive web apps. I'm currently looking for career opportunities in software/web development and/or product management.</h3>
+          <h3>I like designing and building responsive web apps.</h3>
           <div id="socialLinks" class="socialLinks">
             <li>
               <a href="https://www.linkedin.com/in/vince-dinh" target="_blank"><img src="./resources/social_links/linkedin.png" alt="LinkedIn link"/></a>
